@@ -14,9 +14,11 @@ exquisite_CPPFLAGS = \
 -DPACKAGE_BIN_DIR=\"$(bindir)\" \
 -DPACKAGE_LIB_DIR=\"$(libdir)\" \
 -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\" \
-@EXQUISITE_CFLAGS@
+@EXQUISITE_CFLAGS@ \
+@ECORE_FB_CFLAGS@
 
-exquisite_LDADD = @EXQUISITE_LIBS@
+exquisite_LDADD = @EXQUISITE_LIBS@ \
+                  @ECORE_FB_LIBS@
 
 exquisite_write_SOURCES = write.c
 exquisite_write_CPPFLAGS = -I. @EXQUISITE_WRITE_CFLAGS@
